--- a/RacingGame2/RacingGame2/Platforms/Windows/App.xaml
+++ b/RacingGame2/RacingGame2/Platforms/Windows/App.xaml
@@ -1,9 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="RacingGame.WinUI.App"
+    x:Class="RacingGame2.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:RacingGame.WinUI">
+    xmlns:local="using:RacingGame2.WinUI">
 
 </maui:MauiWinUIApplication>
-
