--- a/RacingGame2/RacingGame2/MainPage.xaml
+++ b/RacingGame2/RacingGame2/MainPage.xaml
@@ -1,41 +1,73 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RacingGame2.MainPage">
+             x:Class="RacingGame2.MainPage"
+             BackgroundColor="LightGray">
 
     <ScrollView>
         <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
-
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+        Spacing="25"
+        Padding="30,0"
+        VerticalOptions="Center">
 
             <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+            Text="Rectangle racing game!"
+            TextColor="Black"
+            SemanticProperties.HeadingLevel="Level1"
+            FontSize="32"
+            HorizontalOptions="Center" />
+
+            <Grid HorizontalOptions="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="360" />
+                </Grid.ColumnDefinitions>
+                <Entry x:Name="entry"
+                Placeholder="Player name"
+                HorizontalOptions="FillAndExpand"
+                Grid.Column="0" />
+            </Grid>
 
             <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
+            Text="Choose your Rectangle:"
+            TextColor="Black"
+            SemanticProperties.HeadingLevel="Level2"
+            FontSize="18"
+            HorizontalOptions="Center" />
+
+            <HorizontalStackLayout
+            HorizontalOptions="Center"
+            Spacing="30">
+
+                <Rectangle Fill="Orange"
+                WidthRequest="100"
+                HeightRequest="150"
+                HorizontalOptions="Start" />
+
+                <Rectangle Fill="Green"
+                WidthRequest="100"
+                HeightRequest="150"
                 HorizontalOptions="Center" />
+
+                <Rectangle Fill="Blue"
+                WidthRequest="100"
+                HeightRequest="150"
+                HorizontalOptions="End" />
+            </HorizontalStackLayout>
+
 
             <Button
                 x:Name="CounterBtn"
-                Text="Click me"
+                Text="Start!"
+                BackgroundColor="Red"
+                TextColor="White"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="Navigate"
-                HorizontalOptions="Center" />
+                HorizontalOptions="Center"
+                WidthRequest="100"
+                HeightRequest="50" 
+                Margin="0,20,0,0" />
+
 
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
