--- a/RacingGame2/RacingGame2/MainPage.xaml
+++ b/RacingGame2/RacingGame2/MainPage.xaml
@@ -34,26 +34,43 @@
             FontSize="18"
             HorizontalOptions="Center" />
 
-            <HorizontalStackLayout
-            HorizontalOptions="Center"
-            Spacing="30">
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="30">
+                <Frame x:Name="OrangeFrame"
+                       BackgroundColor="Orange"
+                       WidthRequest="100"
+                       HeightRequest="150"
+                       Padding="0"
+                       BorderColor="Transparent"
+                       CornerRadius="5">
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnRectangleTapped" />
+                    </Frame.GestureRecognizers>
+                </Frame>
 
-                <Rectangle Fill="Orange"
-                WidthRequest="100"
-                HeightRequest="150"
-                HorizontalOptions="Start" />
+                <Frame x:Name="GreenFrame"
+                       BackgroundColor="Green"
+                       WidthRequest="100"
+                       HeightRequest="150"
+                       Padding="0"
+                       BorderColor="Transparent"
+                       CornerRadius="5">
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnRectangleTapped" />
+                    </Frame.GestureRecognizers>
+                </Frame>
 
-                <Rectangle Fill="Green"
-                WidthRequest="100"
-                HeightRequest="150"
-                HorizontalOptions="Center" />
-
-                <Rectangle Fill="Blue"
-                WidthRequest="100"
-                HeightRequest="150"
-                HorizontalOptions="End" />
+                <Frame x:Name="BlueFrame"
+                       BackgroundColor="Blue"
+                       WidthRequest="100"
+                       HeightRequest="150"
+                       Padding="0"
+                       BorderColor="Transparent"
+                       CornerRadius="5">
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnRectangleTapped" />
+                    </Frame.GestureRecognizers>
+                </Frame>
             </HorizontalStackLayout>
-
 
             <Button
                 x:Name="CounterBtn"
