Revert "Merge branch 'main' into unittest1"
This reverts commit 9ebeac98c9732eafd5064c40b87d9c21ef51031f, reversing
changes made to e1c965dea18127b98214e21aa0c165d6c32ee54d.

--- a/RacingGame2/RacingGame2/AboutPage.xaml
+++ b/RacingGame2/RacingGame2/AboutPage.xaml
@@ -37,7 +37,7 @@
                         TextColor="Black"
                         HorizontalOptions="FillAndExpand"
                         Grid.Column="0" 
-                        Text="Rectangle Racing Game was made by Yannieck, Monique en Chris"
+                        Text="Rectangle Racing Game is gemaakt door Yannieck, Monique en Chris"
                         IsReadOnly="True"
                         />
             </Grid>
