--- a/RacingGame2/RacingGame2/HighscorePage.xaml
+++ b/RacingGame2/RacingGame2/HighscorePage.xaml
@@ -2,7 +2,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RacingGame2.HighscorePage"
-             xmlns:local="clr-namespace:RacingGame2"
              Title="HighscorePage"
              BackgroundColor="DarkGray">
     <VerticalStackLayout>
@@ -27,11 +26,9 @@
             <TableView Intent="Menu" Margin="50,20,20,20">
                 <TableRoot>
                     <TableSection>
-                        <TextCell Text="{Binding Source = {x:Static local:HighscoreBoard.FirstPlace}}" TextColor="Black"/>
-                        <TextCell Text="{Binding Source = {x:Static local:HighscoreBoard.SecondPlace}}" TextColor="Black"/>
-                        <TextCell Text="{Binding Source = {x:Static local:HighscoreBoard.ThirdPlace}}" TextColor="Black"/>
-                        <TextCell Text="{Binding Source = {x:Static local:HighscoreBoard.FourthPlace}}" TextColor="Black"/>
-                        <TextCell Text="{Binding Source = {x:Static local:HighscoreBoard.FifthPlace}}" TextColor="Black"/>
+                        <TextCell Text="1. Monique" TextColor="Black"/>
+                        <TextCell Text="2. Chris" TextColor="Black"/>
+                        <TextCell Text="3. Yannieck" TextColor="Black"/>
                     </TableSection>
                 </TableRoot>
             </TableView>
