--- a/RacingGame2/RacingGame2/HighscorePage.xaml
+++ b/RacingGame2/RacingGame2/HighscorePage.xaml
@@ -35,7 +35,16 @@
                     </TableSection>
                 </TableRoot>
             </TableView>
-
         </Frame>
+        <Button
+                x:Name="BackBtn"
+                Text="Back to Menu"
+                BackgroundColor="Blue"
+                TextColor="White"
+                Clicked="Navigate"
+                HorizontalOptions="Center"
+                WidthRequest="120"
+                HeightRequest="50" 
+                Margin="0,20,0,0" />
     </VerticalStackLayout>
 </ContentPage>
